# townwork_crawler

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
crawler/: crawler.py
crawler/crawler/: settings.py
crawler/crawler/spiders/: detail.py  job.py
